--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack -p",
-    "test": "cd src/Ship && npx babel-node test.js && cd ../Board && npx babel-node test.js"
+    "test": "npx babel-node src/test.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
